--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 ---
 layout: default
+highlight_nav: index
 ---
+{% pattern banner/banner heading="Shop Crystals" details="Get amazing deals on crystals, kits and much more!" image="rose-crystal-banner.jpg" button_text="Crystals" %}
 
-<h1>Home!</h1>
+<div class="island-2">
+  {% pattern sections/best-sellers %}
+</div>
+<div class="island">
+    {% pattern sections/intention %}
+</div>
