Fix the indentation for the config file

--- a/_patterns/cards/image.html
+++ b/_patterns/cards/image.html
@@ -1,4 +1,4 @@
-<div class="card chop">
+<div class="card chop background">
   <img class="img-flex" src="/images/crystals/{{include.image}}" alt="">
   <div class="island-1-2">
     <h2>{{include.title}}</h2>
