--- a/_patterns/sections/cart-page.html
+++ b/_patterns/sections/cart-page.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid pad-b-2 background">
   <div class="unit xs-1 s-1 m-1-2 l-1-2">
     <img class="img-flex" src="/images/crystals/black-tourmaline.png" alt="">
   </div>
@@ -7,41 +7,41 @@
     <p>Protection and Energy Crystal</p>
     <p class="tera">$5.95</p>
     <p><em>Size: ~.75" to 1"</em></p>
-      <div class="unit xs-1 s-1 m-1-2 l-1-2">
-        {% pattern forms/quantity %}
-        {% pattern buttons/basic text="Add to Cart" %}
-      </div>
-      <div class="pad-t-2 pad-b-2">
-        <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i>
-        <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i>
-        <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#pin"></use></svg></i>
-        <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#mail"></use></svg></i>
-      </div>
-      <div class="unit xs-1 s-1 m-1-2 l-1-2">
-        <p><em>Protection • Security • Shield</em></p>
-        <p>Think of Black Tourmaline as your personal energy bouncer! Like a security guard for the spirit, it always has your back. Sometimes all we need is to know that we’re protected. When worries seem to pile up in your chest, it can be hard to breathe, let alone know how to confront the challenges ahead. Work with a Black Tourmaline touchstone to feel protected, secure and remind yourself that there’s nothing you can’t handle.</p>
-      </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      {% pattern forms/quantity %}
+      {% pattern buttons/basic text="Add to Cart" %}
     </div>
-  </diV>
-  <div class="grid island">
-    <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-      <h3>Details</h3>
-      <div class="max-length">
+    <div class="pad-t-2 pad-b-2">
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i>
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i>
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#pin"></use></svg></i>
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#mail"></use></svg></i>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <p><em>Protection • Security • Shield</em></p>
+      <p>Think of Black Tourmaline as your personal energy bouncer! Like a security guard for the spirit, it always has your back. Sometimes all we need is to know that we’re protected. When worries seem to pile up in your chest, it can be hard to breathe, let alone know how to confront the challenges ahead. Work with a Black Tourmaline touchstone to feel protected, secure and remind yourself that there’s nothing you can’t handle.</p>
+    </div>
+  </div>
+</diV>
+<div class="grid island border">
+  <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+    <h3 class="gutter-2">Details</h3>
+    <div class="max-length gutter">
       <p>When you’re attracted to <strong>Black Tourmaline</strong>, it often means you need a release in tension, and allow your spirit the extra layer of protection and comfort. Allow your black tourmaline to help you to detox from all the toxic thoughts that are holding your emotions captive. This is like a juice cleanse for the soul. It purges stress and tensions from the aura, and leaves you feeling lighter.</p>
 
       <p>Black Tourmaline is one of the most powerful crystals for protection and elimination of negative energy. It helps to put an energetic boundary between you and others, so that you don’t pick up unwanted energies. Use your Black Tourmaline touchstones in a meditation each morning to create a shield of protection around your body before you leave your home.</p>
 
       <p>Although not typically thought of for this, Black Tourmaline is also one of the most powerful crystals for anxiety. When you feel yourself getting overwhelmed, or if you're having an anxiety attack, hold a Black Tourmaline touchstone in each hand and you will feel its energy sucking the negativity, fear and bad vibes out of your body. </p>
     </div>
-    </div>
-    <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-      <h3>How to Use</h3>
-      <div class="max-length">
-        <ol>
-          <li class="island">Each morning, meditate with a Black Tourmaline touchstone in each hand to clear any negativity and create a shield of energetic protection.</li>
-          <li class="island">Keep your touchstone on your office desk as a touchstone to relieve stress and tension. When you feel overwhelmed or anxious during the work day, grab your touchstone, close your eyes and take 11 deep breaths in through the nose and out through the mouth.</li>
-          <li class="island">Place a Black Tourmaline touchstone on either side of your front door to create a barrier of protection as people go in and out of your space. </li>
-        </ol>
-      </div>
+  </div>
+  <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+    <h3 class="gutter-2">How to Use</h3>
+    <div class="max-length gutter">
+      <ol>
+        <li class="island">Each morning, meditate with a Black Tourmaline touchstone in each hand to clear any negativity and create a shield of energetic protection.</li>
+        <li class="island">Keep your touchstone on your office desk as a touchstone to relieve stress and tension. When you feel overwhelmed or anxious during the work day, grab your touchstone, close your eyes and take 11 deep breaths in through the nose and out through the mouth.</li>
+        <li class="island">Place a Black Tourmaline touchstone on either side of your front door to create a barrier of protection as people go in and out of your space. </li>
+      </ol>
     </div>
   </div>
+</div>
