--- a/_patterns/navigation/top-nav.html
+++ b/_patterns/navigation/top-nav.html
@@ -5,11 +5,11 @@
   <div class="unit xs-1 s-1-2 m-1-2 l-1-4 island">
     <img src="/images/logo.svg" alt="">
   </div>
-  <nav class=" unit s-1 m-1 l-3-4 text-center pad-t-1-4">
+  <nav class="unit s-1 m-1 l-3-4 text-center pad-t-1-4">
     <ul class="nav list-group">
       <li class="{% if page.highlight_nav =='index' %}current{% endif %}"><a class="island" href="/index.html">Home</a></li>
       <li class="{% if page.highlight_nav =='about' %}current{% endif %}"><a class="island" href="#">About</a></li>
-      <li class="{% if page.highlight_nav =='products' %}current{% endif %}"><a class="island" href="/products/products">Shop Intention</a></li>
+      <li class="{% if page.highlight_nav =='products' %}current{% endif %}"><a class="island" href="/products/">Shop Intention</a></li>
       <li class="{% if page.highlight_nav =='learn' %}current{% endif %}"><a class="island" href="#">Learn</a></li>
       <li class="{% if page.highlight_nav =='blog' %}current{% endif %}"><a class="island" href="#">Blog</a></li>
       <li class="{% if page.highlight_nav =='contact' %}current{% endif %}"><a class="island" href="#">Contact</a></li>
