--- a/_patterns/buttons/wide.html
+++ b/_patterns/buttons/wide.html
@@ -1,1 +1,1 @@
-<a class="btn btn-wide" href="#">{{include.text | default: 'Add to Cart'}}</a>
+<a class="btn btn-wide" href="{{include.url}}">{{include.text | default: 'Add to Cart'}}</a>
