--- a/_patterns/cards/view-card.html
+++ b/_patterns/cards/view-card.html
@@ -5,7 +5,7 @@
   <div class="island-1-2">
     <h2>{{include.title}}</h2>
     <div>
-      {% pattern buttons/wide text=include.button_text%}
+      {% pattern buttons/wide text=include.button_text url=include.button_url %}
     </div>
   </div>
 </div>
