--- a/_patterns/sections/intention.html
+++ b/_patterns/sections/intention.html
@@ -3,7 +3,16 @@
 
   <div class="grid gutter-1-4 pad-t-1-4 pad-b-1-4">
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4 gutter-1-4 pad-t-1-4 pad-b-1-4">
-      {% pattern cards/view-card image="black-tourmaline.png" title="Protection & Energy Crystals" button_text="View" %}
+      {% pattern cards/view-card image="black-tourmaline.png" title="Protection & Energy Crystals" button_text="View" button_url="#energy" %}
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4 gutter-1-4 pad-t-1-4 pad-b-1-4">
+      {% pattern cards/view-card image="citrine-stone.png" title="Wealth & Success" button_text="View" button_url="#wealth" %}
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4 gutter-1-4 pad-t-1-4 pad-b-1-4">
+      {% pattern cards/view-card image="rose-quartz-stone.png" title="Love & Happiness" button_text="View" button_url="#love" %}
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4 gutter-1-4 pad-t-1-4 pad-b-1-4">
+      {% pattern cards/view-card image="blue-apatite-stone.png" title="Health & Wellness" button_text="View" button_url="#health" %}
     </div>
   </div>
 
