--- a/products.html
+++ b/products.html
@@ -5,8 +5,8 @@ layout: default
 <h1 class="island-1-2 push-0">Products</h1>
 <div class="grid gutter-1-4 island-1-2 push-0">
 {% for product in site.products %}
-  <div class="unit [ xs-1 s-1 m-1-3 ] island-1-2 push-0">
-  {% pattern cards/product data=product %}
+  <div class="unit island-1-2 push-0">
+  {% pattern sections/sections %}
   </div>
 {% endfor %}
 </div>
