Add images in the readme file

--- a/_patterns/sections/intention.html
+++ b/_patterns/sections/intention.html
@@ -12,7 +12,7 @@
       {% pattern cards/view-card image="rose-quartz-stone.png" title="Love & Happiness" button_text="View" button_url="#love" %}
     </div>
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4 gutter-1-4 pad-t-1-4 pad-b-1-4">
-      {% pattern cards/view-card image="blue-apatite-stone.png" title="Health & Wellness" button_text="View" button_url="#health" %}
+      {% pattern cards/view-card image="blue-apatite-stone.png" title="Health & Wellness" button_text="View" button_url="#love" %}
     </div>
   </div>
 
