--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -1,8 +1,8 @@
 <div class="pad-t-1-2">
 <div class="unit xs-1 s-1 m-1-2 l-1-2 grid left">
   <figure role="group" class="img-flex push-0">
-    <h3 class="push-0 pad-b-1-2 left gutter">Black Wonderland Hoodie</h3>
-    <img alt="" src="/images/hoodie-black.png" aria-details="black-hoodie">
+    <h3 class="push-0 pad-b-1-2 left gutter">{{page.name}}</h3>
+    <img alt="" src="{{page.image}}" aria-details="black-hoodie">
     <figcaption class="mega left gutter"><strong>$ 69.99</strong></figcaption>
   </figure>
 </div>
