Make a multitude of changes such as the addition of the checkout patterns, images and more

--- a/_patterns/buttons/icon-search.html
+++ b/_patterns/buttons/icon-search.html
@@ -1,7 +1,7 @@
-<a class="btn search-btn relative ic-search-btn" href="#">
+<button class="btn search-btn relative ic-search-btn" type="submit">
   <i class="icon i-24 pin-c">
     <svg>
       <use xlink:href="/images/icons.svg#search"></use>
     </svg>
   </i>
-</a>
+</button>
