--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,4 +1,4 @@
-<a class="product unit-content-distribute content-fill link-box island-1-4" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
+<a class="product unit-content-distribute content-fill link-box island-1-2" href="{{include.data.link}}" aria-label="{{include.data.aria_label}}">
   <div class="push-1-4 chop embed embed-1by1">
     <img class="img-flex card-img embed-item" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
