--- a/_patterns/forms/checkbox.html
+++ b/_patterns/forms/checkbox.html
@@ -1,4 +1,4 @@
-<div class="push">
-  <input id="cool" type="checkbox">
-  <label for="cool" class="check milli">Check this if you're cool</label>
+<div>
+  <input id="check-{{include.id}}" type="checkbox">
+  <label for="check-{{include.id}}" class="check milli">{{include.label}} <em class="flag-optional milli normal">(optional)</em></label>
 </div>
