--- a/_patterns/forms/text-field.html
+++ b/_patterns/forms/text-field.html
@@ -1,4 +1,4 @@
-<div class="push">
+<div>
   <label class="label gutter-1-4 push-1-8" for="text-area">Message</label>
   <textarea class="field text-area"></textarea>
 </div>
