--- a/_patterns/navigations/sidebar.html
+++ b/_patterns/navigations/sidebar.html
@@ -1,4 +1,4 @@
-<div class="side-navigation push-1-2">
+<div class="side-navigation push-1-2 text-left">
   <input type="checkbox" id="side-nav-{{include.number}}" class="side-check side-bar">
   <label for="side-nav-{{include.number}}" class="side-label island-1-2 relative">
     <span class="icon-label">{{include.data.name}}</span>
