--- a/_patterns/navigations/tool-bar.html
+++ b/_patterns/navigations/tool-bar.html
@@ -8,13 +8,13 @@
         <a  class="gutter-1-2 pad-t-1-4 pad-b-1-4 block" href="#" aria-label="This will bring you to the sign up form.">Sign up</a>
       </li>
       <li>
-        <a  class="gutter-1-2 pad-t-1-4 pad-b-1-4 block cart" href="#" aria-label="This will bring you to your cart.">
+        <a  class="gutter-1-2 pad-t-1-4 pad-b-1-4 block cart" href="/checkout/" aria-label="This will bring you to your cart.">
           <i class="icon i-20">
             <svg>
               <use xlink:href="/images/icons.svg#cart"></use>
             </svg>
           </i>
-          <span class="icon-label">Cart (<span class="micro">2</span>)</span>
+          <span class="icon-label">Cart (<span class="micro">3</span>)</span>
         </a>
       </li>
     </ul>
