--- a/_patterns/buttons/submit.html
+++ b/_patterns/buttons/submit.html
@@ -1,1 +1,1 @@
-<button class="btn btn-submit text-upper milli">Search</button>
+<button class="btn btn-submit text-upper milli" type="submit">{{include.text}}</button>
