--- a/_patterns/forms/select.html
+++ b/_patterns/forms/select.html
@@ -1,4 +1,4 @@
-<div class="push">
+<div>
   <label class="label gutter-1-4 push-1-8" for="select">{{include.data.label}}</label>
   <select id="select" class="field option-field" value="" required>
     {% for size in include.data.sizes %}
