--- a/_patterns/header/header-sec.html
+++ b/_patterns/header/header-sec.html
@@ -1,5 +1,5 @@
 {% pattern navigations/tool-bar %}
-<header class="masthead wrapper text-center pad-t-2 pad-b grid grid-middle island">
+<header class="masthead wrapper text-center pad-t-2 pad-b grid grid-middle island" role="banner">
   <div class="wordmark push-1-2 unit xs-1 s-1 m-1-3">
     <a href="/" aria-label="This link will bring you to the home page.">
       <i class="icon i-48">
