--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@ highlight_nav: products
     {% for product in site.products %}
     {% if product.category == "love" %}
     <div class="unit [ xs-1 s-1 m-1-3 ] island-1-4">
-      {% pattern cards/image data=product %}
+      {% pattern cards/image data=product button_url="/_layouts/product.html" %}
     </div>
     {% endif %}
     {% endfor %}
