--- a/_patterns/sections/sections.html
+++ b/_patterns/sections/sections.html
@@ -1,14 +1,14 @@
-<div class="pad-t-1-2">
-<div class="unit xs-1 s-1 m-1-2 l-1-2 grid left">
+<div class="pad-t-1-2 grid">
+<div class="unit xs-1 s-1 m-1-2 l-1-2 ">
   <figure role="group" class="img-flex push-0">
-    <h3 class="push-0 pad-b-1-2 left gutter">{{page.name}}</h3>
-    <img alt="" src="{{page.image}}" aria-details="black-hoodie">
+    <h3 class="push-0 pad-b-1-2 gutter">{{page.name}}</h3>
+    <img alt="#" src="{{page.image}}" aria-details="black-hoodie">
     <figcaption class="mega left gutter"><strong>$ 69.99</strong></figcaption>
   </figure>
 </div>
 
-<div>
-<table class="unit xs-1 s-1 m-1-2 l-1-2 pad-t-2">
+<div class="unit xs-1 s-1 m-1-2 l-1-2 pad-t-2">
+<table>
     <thead>
       <tr class="center gutter">
         <th scope="col">Fabric</th>
