--- a/_patterns/sections/cart-page.html
+++ b/_patterns/sections/cart-page.html
@@ -1,11 +1,11 @@
 <div class="grid pad-b-2 background">
   <div class="unit xs-1 s-1 m-1-2 l-1-2">
-    <img class="img-flex" src="/images/crystals/black-tourmaline.png" alt="">
+    <img class="img-flex" src="{{include.data.image}}" alt="">
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
-    <h2>Black Tourmaline</h2>
+    <h2>{{include.data.name}}</h2>
     <p>Protection and Energy Crystal</p>
-    <p class="tera">$5.95</p>
+    <p class="tera">${{include.data.price|default:"1.00"}}</p>
     <p><em>Size: ~.75" to 1"</em></p>
     <div class="unit xs-1 s-1 m-1-2 l-1-2">
       {% pattern forms/quantity %}
