--- a/_patterns/buttons/basic.html
+++ b/_patterns/buttons/basic.html
@@ -1,1 +1,1 @@
-<a class="btn" href="{{include.btn-text}}">{{include.text | default: 'Add to Cart'}}</a>
+<a class="btn" href="{{include.url}}">{{include.text | default: 'Add to Cart'}}</a>
