Apply creature-image tag to creature-card page image

--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -1,6 +1,6 @@
 <div class="card creature-card">
   <h2>{{include.data.title}}</h2>
-  <img class="img-flex img-flex" src="{{include.data.image}}" alt="griffin">
+  <img class="img-flex creature-image" src="{{include.data.image}}" alt="griffin">
   <p class="push-0 pad-b-1-2">{{include.data.desc}}</p>
   <strong class="block pad-b-1-2">{{include.data.cost}}</strong>
 {% pattern buttons/basic text="See Collection" url=include.data.url %}
