Add a jump to top navigation button

--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@ filters: filters-posters
     <h5 class="normal gutter-1-4">Filters</h5>
     <div class="grid">
       {% for filter in site.data[page.filters] %}
-      <div class="unit xs-1-2 s-1-2 m-1 gutter-1-4">
+      <div class="unit xs-1-2 s-1-2 m-1-2 l-1 gutter-1-4 text-left">
         {% pattern navigations/sidebar data=filter number=forloop.index %}
       </div>
       {% endfor %}
