--- a/_patterns/navigations/main-nav.html
+++ b/_patterns/navigations/main-nav.html
@@ -13,7 +13,7 @@
 
     <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
       <input type="checkbox" id="print-nav" class="print-check sub-nav" aria-label="This will expand the prints navigation menu when checked and will close when unchecked.">
-      <label for="print-nav" class="island-1-2 block">
+      <label for="print-nav" class="island-1-2 w-1 block">
         <span>Art Prints</span>
       </label>
       <nav class="print-nav w-1 zindex-1000 sec-nav">
@@ -33,7 +33,7 @@
 
     <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
       <input type="checkbox" id="cloth-nav" class="cloth-check sub-nav" aria-label="This will expand the Apparels navigation menu when checked and will close when unchecked.">
-      <label for="cloth-nav" class="island-1-2">
+      <label for="cloth-nav" class="island-1-2 w-1">
         <span>Apparels</span>
       </label>
       <nav class="cloth-nav w-1 zindex-1000 sec-nav">
@@ -56,7 +56,7 @@
 
     <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
       <input type="checkbox" id="elec-nav" class="elec-check sub-nav" aria-label="This will expand the device cases navigation menu when checked and will close when unchecked.">
-      <label for="elec-nav" class="island-1-2">
+      <label for="elec-nav" class="island-1-2 w-1">
         <span>Device Cases</span>
       </label>
       <nav class="elec-nav w-1 zindex-1000 sec-nav">
