--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Catonaut
 ---
 
 <section class="push-2">
-  {% pattern banners/hero-banner heading="Rocket ship ready and fueled" banner="hero-banner.jpg" %}
+  {% pattern banners/hero-banner heading="Rocket ship ready and fueled" banner="banner-notepad-spacecat.jpg" %}
 </section>
 
 <section class="grid max-length push-2 gutter-1-4">
