Make some updates to the form fields and other pieces

--- a/_patterns/forms/telephone.html
+++ b/_patterns/forms/telephone.html
@@ -1,4 +1,4 @@
 <div>
-  <label class="label push-1-8 gutter-1-2" for="tel">Phone Number</label>
-  <input class="field" id="tel" type="tel" placeholder="111-111-1111" required>
+  <label class="label push-1-8 gutter-1-2" for="tel">Phone Number <em class="flag-optional milli normal">(optional)</em></label>
+  <input class="field" id="tel" type="tel" placeholder="111-111-1111">
 </div>
