--- a/_patterns/checkout/checkout-form.html
+++ b/_patterns/checkout/checkout-form.html
@@ -1,4 +1,4 @@
-<form class="text-center checkout pad-t pad-b gutter-1-2" action="https://formspree.io/turn0213@algonquinlive.com" method="POST">
+<form class="text-center checkout pad-t pad-b gutter-1-2" action="https://formspree.io/turn0213@algonquinlive.com" method="POST" novalidate>
   <h2 class="push-1-2 giga text-upper">Checkout</h2>
   <div class="error-message error-message-highlighted push island-1-4 pad-b" role="alert" aria-live="assertive">
     <h3 class="push-0 error-label">
