--- a/product-details.html
+++ b/product-details.html
@@ -4,12 +4,12 @@ title: Product details
 ---
 
 <div class="grid wrapper push">
-  <div class="unit xs-1 s-1 m-1 l-1 xl-1 gutter push">
+  <div class="unit xs-1 s-1 m-1 l-1 xl-1 gutter push-2">
     {% pattern navigations/breadcrumbs %}
   </div>
 
 {% for product in site.products limit:1%}
-  <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-4 unit-content-distribute push">
+  <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-4 gutter-1-2 unit-content-distribute push">
     {% pattern product-details/photo-array data=product %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2 unit-content-distribute push">
