--- a/_patterns/product-details/product-detail-posters.html
+++ b/_patterns/product-details/product-detail-posters.html
@@ -7,7 +7,7 @@
   <div>
     <div class="push-2 text-left">
       <div class="push-1-2">
-        {% pattern forms/select sizes=include.data.sizes label="Sizes" %}
+        {% pattern forms/select options=include.data.options label=include.data.label %}
       </div>
       <div class="push-1-2 w-1-4">
         {% pattern forms/quantity %}
