Fix card issues

--- a/_patterns/cards/air.html
+++ b/_patterns/cards/air.html
@@ -7,8 +7,8 @@
 
     <div class="beige-bg unit xs-1 s-1 l-1-2 left text-right island-2 gutter-0 push">
       <h1 class="beige-bg title text-left">About Air</h1>
-      <h5 class="tera text-left push-2 pad-t-1-2 italic">"Have you even wondered what Gemini, Libra, and Aquarius all have in common? The answer is they're all AIR signs, of course!"</h5>
-      <h5 class="text-center push-0">- ZodiacFire</h5>
+      <h5 class="tera text-left push-2 pad-t-1-2 normal">"Have you even wondered what <b class="blue bold">Gemini, Libra,</b> & <b class="blue bold">Aquarius</b> all have in common? The answer is they're all AIR signs, of course!"</h5>
+      <h5 class="text-center push-0">ZodiacFire</h5>
     </div>
   </div>
 
