--- a/_patterns/banner/aqua.html
+++ b/_patterns/banner/aqua.html
@@ -1,12 +1,16 @@
-<div class="zodiac-container gutter-2" id="aquarius" tabindex="0">
-  <div class="inner-container-2 center-content-horizontal pad-t-2 gutter">
+<div class="island">
+  <p class="push-0 normal text-center blue"><b>↓</b> Shop by <b class="text-upper bold">zodiac sign</b> below <b>↓</b></p>
+</div>
+
+<div class="zodiac-container push pad-t-2" id="aquarius" tabindex="0">
+  <div class="inner-container-2 center-content-horizontal pad-t-2">
     <svg class="icon i-2 push-1-2"><use xlink:href="/images/icons.svg#aquarius-symbol">
     <h1 class="unit xs-1 s-1 m-1 l-1 exa push-0 title normal">{{include.aquarius-heading}}</h1>
     <div class="unit xs-1 s-1 m-1 l-1 push-0">
       <p class="text-center text-upper giga push-1-2">January 20 – February 18</p>
     </div>
     <div class="unit xs-1 s-1 m-1 l-1">
-      <p class="text-center push-2 italic">{{include.aquarius-paragraph}}</p>
+      <p class="text-center push-2 italic">"{{include.aquarius-paragraph}}"</p>
       {% pattern buttons/light %}
     </div>
   </div>
