Add the product description links to the product information page

--- a/_patterns/sections/cart-page.html
+++ b/_patterns/sections/cart-page.html
@@ -4,7 +4,7 @@
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
     <h2>{{include.data.name}}</h2>
-    <p>Protection and Energy Crystal</p>
+    <p>{{include.data.type}}</p>
     <p class="tera">${{include.data.price|default:"1.00"}}</p>
     <p><em>Size: ~.75" to 1"</em></p>
     <div class="unit xs-1 s-1 m-1-2 l-1-2">
