--- a/_patterns/cards/dino.html
+++ b/_patterns/cards/dino.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <img class="img-flex" src="/images/dinos/stegosaurus.jpg" alt="">
+  <img class="img-flex" src="/images/bread/bread-1.jpg" alt="">
   <h2>Bread</h2>
   <p>This is a delicious bread</p>
 </div>
