Add more details

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -57,7 +57,7 @@
             <i class="icon i-32">
               <svg><use xlink:href="/images/icons.svg#instagram" /></svg>
             </i>
-            <p class="milli push-0">Instagram</p>
+            <p class="push-0 milli">Instagram</p>
           </a>
         </li>
         <li>
@@ -65,7 +65,7 @@
             <i class="icon i-32">
               <svg><use xlink:href="/images/icons.svg#twitter" /></svg>
             </i>
-            <p class="milli push-0">Twitter</p>
+            <p class="push-0 milli">Twitter</p>
           </a>
         </li>
         <div class="unit xs-1 s-1 m-1 gutter-1-2 text-center push-1-2 relative">
