--- a/_patterns/navigation/navigation_bar.html
+++ b/_patterns/navigation/navigation_bar.html
@@ -9,7 +9,7 @@
     <div class="unit xs-1 s-1 m-1-2 l-1-2 pad-t-1 pad-b-1">
       <nav class="wrapper" role="navigation" id="nav" tabindex="0">
         <ul class="text-center list-group-inline push-0 mega">
-          <li><a class="ib gutter-1-2 milli" href="/">Home</a></li>
+          <li><a class="gutter-1-2 milli" href="/">Home</a></li>
           <li><a class="milli gutter-1-2" href="/products/">Products</a></li>
           <li><a class="milli gutter-1-2" href="/cart/">About us</a></li>
           <li><a class="milli gutter-1-2" href="/cart/">Cart</a></li>
