--- a/_patterns/cards/dino.html
+++ b/_patterns/cards/dino.html
@@ -1,5 +1,5 @@
 <div class="card">
   <img class="img-flex" src="/images/bread/bread-1.jpg" alt="">
-  <h2>Bread</h2>
-  <p>This is a cookie we produced.</p>
+  <h2>Berry Cake</h2>
+  <p>It is every girl's princess dream to indulge into this sweet fluffy cake and of course fresh strawberries. </p>
 </div>
